# subtracker

./: .gitignore  README.md
sample_data/: statement_sample.csv
subtracker/: __init__.py  __main__.py  pyproject.toml  store.py
subtracker/subtracker/: core.py  importer.py  server.py
subtracker/tests/: test_core.py
subtracker/web/: index.html
web/: app.js  style.css
