[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "subtracker"
version = "0.1.0"
description = "A self-hosted, zero-dependency subscription tracker."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["subscriptions", "self-hosted", "privacy", "finance", "cli"]
dependencies = []

[project.scripts]
subtracker = "subtracker.__main__:main"

[tool.setuptools]
packages = ["subtracker"]
